# 1brc-rust

./: Cargo.toml  README.md
src/: main.rs
