[package]
name = "rust-1brc"
version = "0.1.0"
edition = "2021"

[build]
# rustflags = ["-C", "target-cpu=native"]
rustflags = ["-C", "symbol-mangling-version=v0"]


[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
debug = 1


[rust]
debuginfo-level = 1


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9.3"
rustc-hash = "1.1.0"
